# nbparts

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  flake.nix  nbparts.cabal
.github/workflows/: build-nix.yaml  build.yaml  release.yaml
app/: Main.hs  Unpack.hs
app/Nbparts/: Pack.hs  Types.hs  Unpack.hs
app/Nbparts/Cli/: Options.hs
app/Nbparts/Pack/: Error.hs  Metadata.hs  Mime.hs  Outputs.hs  Sources.hs
app/Nbparts/Pack/Sources/: Markdown.hs
app/Nbparts/Types/: Metadata.hs  Mime.hs  Sources.hs
app/Nbparts/Unpack/: Error.hs  Metadata.hs  Mime.hs  Outputs.hs  Sources.hs
app/Nbparts/Unpack/Sources/: Markdown.hs
app/Nbparts/Util/: Map.hs
src/Nbparts/: Pack.hs  Run.hs  Types.hs  Unpack.hs
src/Nbparts/Pack/: Metadata.hs  Mime.hs  Outputs.hs  Sources.hs
src/Nbparts/Pack/Sources/: Markdown.hs
src/Nbparts/Types/: Error.hs  Manifest.hs  Metadata.hs  Mime.hs  Outputs.hs  Sources.hs
src/Nbparts/Types/Sources/: Markdown.hs
src/Nbparts/Unpack/: Metadata.hs  Mime.hs  Outputs.hs  Sources.hs
src/Nbparts/Unpack/Sources/: Markdown.hs
src/Nbparts/Util/: Markdown.hs  Prompt.hs  Text.hs
tests/Tests/: SpecHook.hs
tests/Tests/Integration/: PackSpec.hs  UnpackPackSpec.hs  UnpackSpec.hs  Util.hs
tests/Tests/Types/: ManifestSpec.hs  MetadataSpec.hs  MimeSpec.hs  OutputsSpec.hs  SourcesSpec.hs
tests/Tests/Util/: Json.hs  MapSpec.hs  MarkdownSpec.hs  TextSpec.hs
tests/fixtures/: attachments-multiple-mime-bundle-entries.ipynb  attachments-reference-unusual-formatting.ipynb  attachments-unusual-formatting.ipynb  attachments.ipynb  duplicate-attachments.ipynb  empty-cells.ipynb  error-outputs.ipynb  escape-markdown-comments.ipynb  image-outputs.ipynb  interactive-figure-outputs.ipynb  latex.ipynb  malformed.ipynb  missing-attachment.ipynb  missing-cell-ids.ipynb  nbparts-cell-marker.ipynb  raw-cells.ipynb  stream-outputs.ipynb  v3.ipynb
tests/fixtures/commonmark-spec/: LICENSE  commonmark-spec.ipynb
