cabal-version: 3.8
name: nbparts
version: 0.1.0.0
-- synopsis:
-- description:
license: Apache-2.0
license-file: LICENSE
author: Dixon Sean Low Yan Feng
maintainer: root@dixslyf.dev
-- copyright:
build-type: Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nbparts
    import: warnings
    main-is: Main.hs
    other-modules:
        Nbparts.Types,
        Nbparts.Unpack,
        Nbparts.Unpack.Sources,
        Nbparts.Unpack.Sources.Markdown,
        Nbparts.Unpack.Outputs,
        Nbparts.Unpack.Metadata,
        Nbparts.Unpack.Mime,
        Nbparts.Unpack.Error,
        Nbparts.Pack,
        Nbparts.Pack.Sources,
        Nbparts.Pack.Sources.Markdown,
        Nbparts.Pack.Outputs,
        Nbparts.Pack.Metadata,
        Nbparts.Pack.Mime,
        Nbparts.Pack.Error,
        Paths_nbparts
    autogen-modules: 
        Paths_nbparts
    -- other-extensions:
    build-depends:
        directory ^>=1.3.8.5,
        base ^>=4.19.2.0,
        mtl ^>=2.3.1,
        filepath ^>=1.4.301.0,
        text ^>=2.1.1,
        bytestring ^>=0.12.1.0,
        optparse-applicative ^>=0.19.0.0,
        ipynb ^>=0.2,
        containers ^>=0.7,
        aeson ^>=2.2.3.0,
        aeson-pretty ^>=0.8.10,
        yaml ^>=0.11.11.2,
        libyaml ^>=0.1.4,
        crypton ^>=1.0.4,
        mime-types ^>= 0.1.2.0,
        cmark-gfm ^>=0.2.6,
        megaparsec ^>=9.7.0
    hs-source-dirs: app
    default-language: GHC2021
