cabal-version: 3.8
name: nbparts
version: 0.1.0.0
-- synopsis:
-- description:
license: Apache-2.0
license-file: LICENSE
author: Dixon Sean Low Yan Feng
maintainer: root@dixslyf.dev
-- copyright:
build-type: Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wmissing-import-lists

common extensions
    default-extensions:
        OverloadedStrings,
        LambdaCase,
        NoFieldSelectors,
        DuplicateRecordFields

library
    import: warnings, extensions
    exposed-modules:
        Nbparts.Types,
        Nbparts.Types.Manifest,
        Nbparts.Types.Sources,
        Nbparts.Types.Outputs,
        Nbparts.Types.Metadata,
        Nbparts.Types.Mime,
        Nbparts.Types.Error,
        Nbparts.Unpack,
        Nbparts.Unpack.Sources,
        Nbparts.Unpack.Sources.Markdown,
        Nbparts.Unpack.Outputs,
        Nbparts.Unpack.Metadata,
        Nbparts.Unpack.Mime,
        Nbparts.Pack,
        Nbparts.Pack.Sources,
        Nbparts.Pack.Sources.Markdown,
        Nbparts.Pack.Outputs,
        Nbparts.Pack.Metadata,
        Nbparts.Pack.Mime,
        Nbparts.Util.Text,
        Nbparts.Util.Markdown,
        Nbparts.Util.Map,
    other-modules:
        Paths_nbparts
    autogen-modules:
        Paths_nbparts
    build-depends:
        directory ^>=1.3.8.5,
        base ^>=4.19.2.0,
        mtl ^>=2.3.1,
        filepath ^>=1.4.301.0,
        text ^>=2.1.1,
        bytestring ^>=0.12.1.0,
        ipynb ^>=0.2,
        containers ^>=0.7,
        aeson ^>=2.2.3.0,
        aeson-pretty ^>=0.8.10,
        yaml ^>=0.11.11.2,
        libyaml ^>=0.1.4,
        crypton ^>=1.0.4,
        mime-types ^>= 0.1.2.0,
        cmark-gfm ^>=0.2.6,
        megaparsec ^>=9.7.0
    hs-source-dirs: src
    default-language: GHC2021

executable nbparts
    import: warnings, extensions
    main-is: Main.hs
    build-depends:
        nbparts,
        base ^>=4.19.2.0,
        mtl ^>=2.3.1,
        text ^>=2.1.1,
        optparse-applicative ^>=0.19.0.0
    hs-source-dirs: app
    default-language: GHC2021

test-suite test-nbparts
    import: warnings, extensions
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    build-depends:
        nbparts,
        base ^>=4.19.2.0,
        text ^>=2.1.1,
        containers ^>=0.7,
        hspec ^>=2.11.12,
        hedgehog ^>=1.5,
        hspec-hedgehog ^>=0.3.0.0,
        registry-hedgehog-aeson ^>=0.3.1.2,
        aeson ^>=2.2.3.0,
        yaml ^>=0.11.11.2,
        ipynb ^>=0.2,
        mime-types ^>= 0.1.2.0
    other-modules:
        Tests.SpecHook,
        Tests.Types.ManifestSpec,
        Tests.Types.MetadataSpec,
        Tests.Types.SourcesSpec,
        Tests.Types.OutputsSpec,
        Tests.Types.MimeSpec,
        Tests.Util.TextSpec,
        Tests.Util.MapSpec
    build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
    default-language: GHC2021
    ghc-options: -threaded
